src/state/snapshots/protols__state__definition__test__definition_import_position_based.snap
---
source: src/state/definition.rs
expression: loc
---
- originSelectionRange:
    start:
      line: 4
      character: 8
    end:
      line: 4
      character: 15
  targetUri: "file://<redacted>/c.proto"
  targetRange:
    start:
      line: 0
      character: 0
    end:
      line: 0
      character: 0
  targetSelectionRange:
    start:
      line: 0
      character: 0
    end:
      line: 0
      character: 0
