src/state/snapshots/protols__state__definition__test__definition_position_based-2.snap
---
source: src/state/definition.rs
expression: "state.definition(&a_uri, Position { line: 11, character: 5 }, &ipath)"
---
- originSelectionRange:
    start:
      line: 11
      character: 3
    end:
      line: 11
      character: 9
  targetUri: "file://input/b.proto"
  targetRange:
    start:
      line: 5
      character: 0
    end:
      line: 14
      character: 1
  targetSelectionRange:
    start:
      line: 5
      character: 8
    end:
      line: 5
      character: 14
