src/state/snapshots/protols__state__definition__test__definition_position_based.snap
---
source: src/state/definition.rs
expression: "state.definition(&b_uri, Position { line: 5, character: 10 }, &ipath)"
---
- originSelectionRange:
    start:
      line: 5
      character: 8
    end:
      line: 5
      character: 14
  targetUri: "file://input/b.proto"
  targetRange:
    start:
      line: 5
      character: 0
    end:
      line: 14
      character: 1
  targetSelectionRange:
    start:
      line: 5
      character: 8
    end:
      line: 5
      character: 14
