src/state/snapshots/protols__state__definition__test__workspace_test_definition-3.snap
---
source: src/state/definition.rs
expression: "state.definition(&ipath, \"com.workspace\",\nJumpable::Identifier(\"com.utility.Foobar.Baz\".to_owned()))"
---
- uri: "file://input/c.proto"
  range:
    start:
      line: 8
      character: 11
    end:
      line: 8
      character: 14
