src/state/snapshots/protols__state__definition__test__workspace_test_definition-4.snap
---
source: src/state/definition.rs
expression: "state.definition(&ipath, \"com.utility\",\nJumpable::Identifier(\"Baz\".to_owned()))"
---
- uri: "file://input/c.proto"
  range:
    start:
      line: 8
      character: 11
    end:
      line: 8
      character: 14
