src/state/snapshots/protols__state__definition__test__workspace_test_definition.snap
---
source: src/state/definition.rs
expression: "state.definition(&ipath, \"com.workspace\",\nJumpable::Identifier(\"Author\".to_owned()))"
---
- uri: "file://input/b.proto"
  range:
    start:
      line: 5
      character: 8
    end:
      line: 5
      character: 14
