src/state/snapshots/protols__state__definition__test__workspace_test_definition_enum_and_nonexistent-2.snap
---
source: src/state/definition.rs
expression: "state.definition(&ipath, \"com.enums\",\nJumpable::Identifier(\"Color.RED\".to_owned()))"
---
- uri: "file://input/enums.proto"
  range:
    start:
      line: 2
      character: 13
    end:
      line: 2
      character: 16
