src/state/snapshots/protols__state__definition__test__workspace_test_definition_identifiers-2.snap
---
source: src/state/definition.rs
expression: "state.resolve_identifier_locations(\"com.workspace\", \"Author.Address\")"
---
- uri: "file://input/b.proto"
  range:
    start:
      line: 9
      character: 11
    end:
      line: 9
      character: 18
