src/state/snapshots/protols__state__definition__test__workspace_test_definition_identifiers-4.snap
---
source: src/state/definition.rs
expression: "state.resolve_identifier_locations(\"com.utility\", \"Baz\")"
---
- uri: "file://input/c.proto"
  range:
    start:
      line: 8
      character: 11
    end:
      line: 8
      character: 14
